# SEZAR

.github/workflows/: workflow.yml
src/: LICENSE  README.md  pyproject.toml
src/sezar/: core.py
src/sezar.egg-info/: PKG-INFO
