[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SEZAR"
version = "1.0.0"
description = "O'zbek lotin alifbosiga mos Caesar Cipher kutubxonasi"
authors = [
    { name="Raxmonqulov Diyorjon Ulug'bek o'g'li", email="coderdiyorjon0624@gmail.com" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Natural Language :: Uzbek"
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
